# KyogiProcon2025

./: CMakeLists.txt  README.md  policy.md  problem.md
data/: answer.json  problem.json
lib/: setting.hh
src/: calculationPair.cc  loadField.cc  main  main.cc  rotation.cc
tests/: CMakeLists.txt  main.cc
